service-mesh-demo/2-pure-istio/apply-addons.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio-system
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /graph
        pathType: Prefix
        backend:
          serviceName: prometheus
          servicePort: 9090
  - http:
      paths:
      - path: /kiali
        pathType: Prefix
        backend:
          serviceName: kiali
          servicePort: 20001
