service-mesh-demo/2-pure-istio/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo0
  labels:
    istio-injection: enabled
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-demo
  namespace: demo0
spec:
  selector:
    istio: ingressgateway
  servers:
  - port: 
      number: 80
      name: http
      protocol: HTTP
    hosts:
    -  '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo1-vs
  namespace: demo0
spec:
  hosts:
    - '*'
  gateways:
    - gateway-demo
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: demo1.demo0.svc.cluster.local
          port:
            number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo1
  namespace: demo0
spec:
  selector:
    app: demo1
  ports:
    - name: http-8080
      protocol: TCP
      port: 8080
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1
  namespace: demo0
  labels:
    app: demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  
  template:
    metadata:
      labels:
        app: demo1
    
    spec:
      containers:
        - name: demo1
          image: siudeks/demo:demo1
          imagePullPolicy: Always
          ports:
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo2
  namespace: demo0
spec:
  selector:
    app: demo2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
  namespace: demo0
  labels:
    app: demo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo2
  
  template:
    metadata:
      labels:
        app: demo2
    
    spec:
      containers:
        - name: demo1
          image: siudeks/demo:demo2
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
